reset css and html sorted, restarting css

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <section class="columns">
             
             <div class="card">
-                <div>
-                    <h3>Flexible Row</h3>
+                <div class="code">
+                    <h2>Flexible Row</h2>
                     <p>Use this to create a Flexbox row layout</p>
                     <pre><code>.row {
     display: flex;
@@ -36,8 +36,8 @@
             </div>
 
             <div class="card">
-                <div>
-                    <h3>Flexible Row</h3>
+                <div class="code">
+                    <h2>Flexible Row</h2>
                     <p>Use this to create a Flexbox column layout</p>
                     <pre><code>.column {
     display: flex;
@@ -49,8 +49,8 @@
             </div>
 
             <div class="card">
-                <div>
-                    <h3>CSS Grid Layout</h3>
+                <div class="code">
+                    <h2>CSS Grid Layout</h2>
                     <p>Use the below to create a 12 column gird from CSS</p>
                     <pre><code>.grid {
     display: grid;
@@ -63,8 +63,8 @@
             </div>
 
             <div class="card">
-                <div>
-                    <h3>Linear Gradients</h3>
+                <div class="code">
+                    <h2>Linear Gradients</h2>
                     <p>Create a linear background gradient from top to bottom</p>
                     <pre><code>.linear-gradient-background {
     background-image: linear-gradient (
@@ -78,8 +78,8 @@
             </div>
 
             <div class="card">
-                <div>
-                    <h3>Box Transition Glow</h3>
+                <div class="code">
+                    <h2>Box Transition Glow</h2>
                     <p>Create a glow on hover using transition and box-shadow</p>
                     <pre><code>.code-card .card-header {
     border-radius: 8px;
@@ -96,8 +96,8 @@
             </div>
         
             <div class="card">
-                <div>
-                    <h3>Overlay Card with Title</h3>
+                <div class="code">
+                    <h2>Overlay Card with Title</h2>
                     <p>Position properties and negative margins can raise elements above natural starting point</p>
                     <pre><code>.card-header {
     position: relative;
