css started to be added

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
     <main>
 
-        <section class="columns">
+        <section class="row">
             
-            <div class="card">
-                <div class="code">
+            <div class="columns">
+                <div class="code-box">
                     <h2>Flexible Row</h2>
                     <p>Use this to create a Flexbox row layout</p>
                     <pre><code>.row {
@@ -35,8 +35,8 @@
                 </div>
             </div>
 
-            <div class="card">
-                <div class="code">
+            <div class="columns">
+                <div class="code-box">
                     <h2>Flexible Row</h2>
                     <p>Use this to create a Flexbox column layout</p>
                     <pre><code>.column {
@@ -48,8 +48,8 @@
                 </div>
             </div>
 
-            <div class="card">
-                <div class="code">
+            <div class="columns">
+                <div class="code-box">
                     <h2>CSS Grid Layout</h2>
                     <p>Use the below to create a 12 column gird from CSS</p>
                     <pre><code>.grid {
@@ -62,8 +62,8 @@
                 </div>
             </div>
 
-            <div class="card">
-                <div class="code">
+            <div class="columns">
+                <div class="code-box">
                     <h2>Linear Gradients</h2>
                     <p>Create a linear background gradient from top to bottom</p>
                     <pre><code>.linear-gradient-background {
@@ -77,8 +77,8 @@
                 </div>
             </div>
 
-            <div class="card">
-                <div class="code">
+            <div class="columns">
+                <div class="code-box">
                     <h2>Box Transition Glow</h2>
                     <p>Create a glow on hover using transition and box-shadow</p>
                     <pre><code>.code-card .card-header {
@@ -95,8 +95,8 @@
                 </div>
             </div>
         
-            <div class="card">
-                <div class="code">
+            <div class="columns">
+                <div class="code-box">
                     <h2>Overlay Card with Title</h2>
                     <p>Position properties and negative margins can raise elements above natural starting point</p>
                     <pre><code>.card-header {
