css added further, user selection highlight added

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    }
-                        </code> 
+    }</code> 
                     </pre>
                 </div>
             </div>
@@ -42,8 +41,7 @@
                     <pre><code>.column {
     display: flex;
     flex-direction: column;
-    }
-                        </code>
+    }</code>
                     </pre>
                 </div>
             </div>
@@ -56,8 +54,7 @@
     display: grid;
     width: 100%;
     grid-template-columns: repeat(12, 1fr);
-    }
-                        </code>
+    }</code>
                     </pre>
                 </div>
             </div>
@@ -69,10 +66,8 @@
                     <pre><code>.linear-gradient-background {
     background-image: linear-gradient (
     rgba(232, 102, 236, 0.3) 0%,
-    rgba(232, 102, 236, 0.6) 100%
-    );
-    }
-                        </code>
+    rgba(232, 102, 236, 0.6) 100%);
+    }</code>
                     </pre>
                 </div>
             </div>
@@ -83,14 +78,12 @@
                     <p>Create a glow on hover using transition and box-shadow</p>
                     <pre><code>.code-card .card-header {
     border-radius: 8px;
-    transition: all 0.5s ease-in-out;
-    }
+    transition: all 0.5s ease-in-out;}
 
     .code-card:hover,
     .code-card:hover .card-header {
     box-shadow: inset 0px 0px 8px rgba (232, 102, 236, 1), 0 0 15px rgba (232, 102, 236, 1);
-    }
-                        </code>
+    }</code>
                     </pre>
                 </div>
             </div>
@@ -102,8 +95,7 @@
                     <pre><code>.card-header {
     position: relative;
     margin-top: -20px;
-    }
-                        </code>
+    }</code>
                     </pre>
                 </div>
             </div>
