corrected mistake in html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <div class="columns">
                 <div class="code-box">
-                    <h2>Flexible Row</h2>
+                    <h2>Flexible Column</h2>
                     <p>Use this to create a Flexbox column layout</p>
                     <pre><code>.column {
     display: flex;
