code snippets moved and made flex

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    }</code> 
-                    </pre>
+    }</code> </pre>
                 </div>
             </div>
 
@@ -41,8 +40,7 @@
                     <pre><code>.column {
     display: flex;
     flex-direction: column;
-    }</code>
-                    </pre>
+    }</code></pre>
                 </div>
             </div>
 
@@ -54,8 +52,7 @@
     display: grid;
     width: 100%;
     grid-template-columns: repeat(12, 1fr);
-    }</code>
-                    </pre>
+    }</code></pre>
                 </div>
             </div>
 
@@ -67,8 +64,7 @@
     background-image: linear-gradient (
     rgba(232, 102, 236, 0.3) 0%,
     rgba(232, 102, 236, 0.6) 100%);
-    }</code>
-                    </pre>
+    }</code></pre>
                 </div>
             </div>
 
@@ -83,8 +79,7 @@
     .code-card:hover,
     .code-card:hover .card-header {
     box-shadow: inset 0px 0px 8px rgba (232, 102, 236, 1), 0 0 15px rgba (232, 102, 236, 1);
-    }</code>
-                    </pre>
+    }</code></pre>
                 </div>
             </div>
         
@@ -95,8 +90,7 @@
                     <pre><code>.card-header {
     position: relative;
     margin-top: -20px;
-    }</code>
-                    </pre>
+    }</code></pre>
                 </div>
             </div>
 
